Completed assignment. Great

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 
 h1, h2 {
   font-family: 'Gabriela', serif;
-  color: #fff;
+  color: rgba(188, 240, 47, 0.932);
 }
 
 h1 {
@@ -56,7 +56,7 @@ p {
 }
 
 a {
-  color: black;
+  color: rgb(129, 148, 108);
   text-decoration: none;
 }
 
